--- a/content/articles/vancalster2019/index.qmd
+++ b/content/articles/vancalster2019/index.qmd
@@ -17,7 +17,7 @@ Objectives
 : STRATOS initiative paper, arguing for the relevance and importance of calibration, as a complement to discrimination, in prediction modeling.
 
 Related articles
-: Van Calster, Niebor and Vergouwe et al. (2016) [(PubMed)[https://pubmed.ncbi.nlm.nih.gov/26772608/]] [(kepipedia)[../vancalster2019/index.qmd]]; Kull, Filho and Flach (2017) [(GitHub)[https://betacal.github.io/]].
+: Van Calster, Niebor and Vergouwe et al. (2016) [[PubMed](https://pubmed.ncbi.nlm.nih.gov/26772608/)] [[kepipedia](../vancalster2019/index.qmd)]; Kull, Filho and Flach (2017) [[GitHub](https://betacal.github.io/)].
 
 Link
 : DOI: [10.1186/s12916-019-1466-7](https://doi-org.proxy.kib.ki.se/10.1186/s12916-019-1466-7)
@@ -49,21 +49,4 @@ Link
 
 - In practice, I found both approaches poor in improving calibrations: neither may be possible within a machine learning context, and their effect on calibration may be minor.
 - Instead, I would also like to mention Platt Scaling, Isotonic Regression and Beta Calibration, which can be read about in [Kull, Filho and Flach (2017)](https://proceedings.mlr.press/v54/kull17a.html).
-
-::: {.callout-warning}
-
-### What should go here?
-- Text!
-
-:::
-
-- And what should go here?
-- Anything here?
-
-::: {.callout-note}
-
-### What about here? Is there anything worth putting here?
-- Text!
-
-:::
 
